fixed sidenav bug on mobile-view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,57 +10,60 @@
         display: none;
     }
     /* home page styling */
-/* navigation */
-.navigation {
-    background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
-    padding: 1.3rem 0;
-    padding-top: 2.2rem;
-    /* height: 300px; */
-}
-.navigation-fixed {
-    background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
-    padding-bottom: 2rem;
-    /* background: rgb(0, 0, 139); */
-    width: 100%;
-    position: fixed;
-    z-index:10;
-    transition: 1s width ease-in-out ;
-}
+    /* navigation */
+    .navigation {
+        background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
+        padding: 1.3rem 0;
+        padding-top: 2.2rem;
+        /* height: 300px; */
+    }
+    .navigation-fixed {
+        background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
+        padding-bottom: 2rem;
+        /* background: rgb(0, 0, 139); */
+        width: 100%;
+        position: fixed;
+        z-index:10;
+        transition: 1s width ease-in-out ;
+    }
 
-#nav-menu-icon {
-    font-size: 1.5rem;
-    margin-top: 14%;
-}
-#open-account-nav {
-    margin-top: 0.6rem;
-}
-#open-account-nav > a {
-    color: white;
-}
+    #nav-menu-icon {
+        font-size: 1.5rem;
+        margin-top: 14%;
+    }
+    #open-account-nav {
+        margin-top: 0.6rem;
+    }
+    #open-account-nav > a {
+        color: white;
+    }
 
-#logo-nav > img {
-    width:50%;
-    height: auto;
-    margin-left:40%;
-}
+    #logo-nav > img {
+        width:50%;
+        height: auto;
+        margin-left:40%;
+    }
 
-#about-us-nav {
-    margin-top: 1%;
-    padding-left: 17%;
-}
-#about-us-nav > a {
-    color: white;
-    padding-right: 1.5rem;
-}
+    #about-us-nav {
+        margin-top: 1%;
+        padding-left: 17%;
+    }
+    #about-us-nav > a {
+        color: white;
+        padding-right: 1.5rem;
+    }
 
-/* banner */
-.home-banner {
+    /* banner */
+    .home-banner {
     /* background-color: #0056A9; */
     /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
     background: url('../img/banner-wallpaper.jpg');
-    
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     color: white;
+    background-color: rgba(200,100,0,.5);
+    background-blend-mode: multiply;
     /* height: 300px; */
 }
 
@@ -86,11 +89,11 @@
 /* create account banner */
 #create-account-banner > h3{
     margin-top: 5rem;
-    font-size: 3rem;
+    font-size: 1.9rem;
     font-weight: bold;
 }
 #create-account-banner > p{
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     font-weight: 300;
     margin: 2rem 0;
 }
@@ -103,13 +106,12 @@
     text-align: right;
 }
 #promotional-offer-banner > h3 {
-    margin-top: 8.4rem;
-    font-size: 2.9rem;
+    margin-top: 5.1rem;
+    font-size: 2.0rem;
     text-align: right;
 }
 #promotional-offer-banner > span {
     font-size: 2.4rem;
-    /* text-align: right; */
 }
 /* choose what's right for you  */
 .choose-wrfy-header {
@@ -177,6 +179,71 @@
     color: white;
     margin: 0.6rem 0;
 }
+/* dashboard */
+.savings-amount {
+    color: white;
+    font-weight: bold;
+    font-size: 3.5rem;
+    margin: 4rem 0;
+}
+
+/* email sent */
+.mail-sent-img{
+    width: 50%;
+    margin: 0 24%;
+}
+
+.mail-sent-container{
+    margin-top: 12%;
+}
+
+.mail-sent-container > h3 {
+    font-size: 250% !important; 
+    margin: 3%;
+    letter-spacing: 2%;
+}
+
+.mail-sent-container > p {
+    font-size: 112%;
+}
+
+/* home page side navbar */
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    text-align:center;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  
+  }
+  
+  .sidenav a:hover{
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
 
 }
 
@@ -236,7 +303,6 @@
     /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
     background: url('../img/banner-wallpaper-mobile.jpg') no-repeat;
     height: 100%;
-    
     width: 100%;
     color: white;
     /* height: 300px; */
@@ -359,5 +425,71 @@
     color: white;
     margin: 0.6rem 0;
 }
+/* dashboard */
+.savings-amount {
+    color: white;
+    font-weight: bold;
+    font-size: 3.5rem;
+    margin: 4rem 0;
+}
+
+/* email sent */
+.mail-sent-img{
+    width: 50%;
+    margin: 0 24%;
+}
+
+.mail-sent-container{
+    margin-top: 12%;
+}
+
+.mail-sent-container > h3 {
+    font-size: 250% !important; 
+    margin: 3%;
+    letter-spacing: 2%;
+}
+
+.mail-sent-container > p {
+    font-size: 112%;
+}
+
+/* home page side navbar */
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    text-align:center;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  
+  }
+  
+  .sidenav a:hover{
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
 
 }
